// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="477ac8b4-25e2-483a-8686-2d1332c4da1c"
        style="height: 1700px;"
      >
        <div
          class="draggable"
          data-testid="draggable_132de855-4042-4dc1-a18f-cc2e6a8f790a"
          style="left: 100px; top: 1200px;"
        >
          <div>
            I am a draggable element
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="477ac8b4-25e2-483a-8686-2d1332c4da1c"
        style="height: 1590px;"
      >
        <div
          class="draggable"
          data-testid="draggable_1e47a1e1-3c67-4df5-adf1-da542c789adb"
          style="left: 100px; top: 1200px;"
        >
          <div>
            I am a draggable element
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="477ac8b4-25e2-483a-8686-2d1332c4da1c"
        style="height: 0px;"
      />
    </div>
  </div>
</body>
`;
